fix footer alignment

--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -32,6 +32,7 @@
 .left-footer {
   display: flex;
   flex-direction: column;
+  justify-content: flex-end;
   gap: 4.5rem;
   .newsletter-btn {
     border: 1px solid #fff;
